# me-ai

./: .dockerignore  .env.template  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  ci.yml  docker-compose.yml  pyproject.toml  ruff.toml
.github/workflows/: ci.yml  docker-build.yml
documentation/: v0.1_planning.md
me_ai/: __main__.py
me_ai/api/: __init__.py  app.py
me_ai/api/routers/: __init__.py  chat.py  health.py
me_ai/api/test/: test_health.py
me_ai/config/: __init__.py  base.py  development.py  paths.py  production.py  test.py
test/api/: conftest.py  test_chat.py  test_health.py
