[project]
name = "me-ai"
version = "0.1.0"
description = ""
authors = [
    {name = "Jason Yang",email = "jas.yang71@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "fastapi (>=0.119.1,<0.120.0)",
    "uvicorn[standard] (>=0.38.0,<0.39.0)",
    "pydantic (>=2.12.3,<3.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "pydantic-settings (>=2.11.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pytest-asyncio = "^1.2.0"
ruff = "^0.14.1"
mypy = "^1.18.2"
pre-commit = "^4.3.0"

[tool.poetry]
package-mode = false

[tool.ruff.format]
indent-style = "tab"